Closed
Bug 368397
Opened 19 years ago
Closed 18 years ago
Ctrl-click doesn't select tree items before triggering context menu
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: philor, Assigned: jaas)
References
Details
Attachments
(1 file)
|
2.22 KB,
patch
|
cbarrett
:
review+
pavlov
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a2pre) Gecko/20070125 Firefox/3.0a2pre ID:2007012520
When you right-click a tree item in a tree without a selected item, the item is selected, and then the context menu popup shows for the selected item, but when you ctrl-click, you get the context menu first, for "nothing selected."
STR:
1. Open about:config
2. Without clicking anything first, right-click a pref
At this point, you have a context menu with active "Copy Name" and "Copy Value" items
3. Close and reopen about:config
4. Without clicking anything first, ctrl-click a pref
At this point, although the pref appears selected, you have a context menu with inactive "Copy Name" and "Copy Value" items, like you get if you filter down to just a few prefs and click the blank space below the tree. Dismiss the context popup and ctrl-click again, or ctrl-click any other pref now that you have a selection, or click a pref first, then ctrl-click any other pref, and you get the correct menu.
Finding working examples in other trees is a little more difficult, but if you persuade Thunderbird not to select anything in the thread pane, and ctrl-click a message there, you get the "no message selected" version of the menu, and in Firefox's History sidebar, if you expand out to an individual entry without a selection, right-click selects and shows the correct menu, ctrl-click selects but doesn't open any menu at all.
A current --enable-default-toolkit=mac build works exactly the same with either ctrl-click or right-click.
Flags: blocking1.9?
| Reporter | ||
Comment 1•19 years ago
|
||
Ah, also Firefox's bookmarks sidebar, which complicates training yourself to work around it: remembering to always click an about:config pref before ctrl-clicking it is a good thing, but if you click a sidebar bookmark, you open it over your current tab, whether or not you wanted to.
Ok, this sounds related/similar to bug 368077 -- though in that one control-click is giving focus to the right place. It sounds like control-click/right-click is just broken overall in a bunch of edge cases.
Flags: blocking1.9? → blocking1.9+
Attachment #261820 -
Flags: review?(cbarrett)
Comment 4•18 years ago
|
||
Comment on attachment 261820 [details] [diff] [review]
fix v1.0
Looks good. Wonder why my version of this fix didn't work. Oh well. Tested it in about:config and it works correctly.
Attachment #261820 -
Flags: review?(cbarrett) → review+
Attachment #261820 -
Flags: superreview?(pavlov)
Updated•18 years ago
|
Attachment #261820 -
Flags: superreview?(pavlov) → superreview+
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•