Ctrl-click doesn't select tree items before triggering context menu. fix that. b=368397 r=cbarrett sr=pav